# comparison

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/: pyproject.toml
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/api/routes/: alerts.py  cleanup.py  events.py  health.py  history.py  mappings.py  palimpsest.py  scheduler.py  scrape.py  settings.py  storage.py  unmapped.py  ws.py
src/api/schemas/: __init__.py  alerts.py  api.py  cleanup.py  mappings.py  palimpsest.py  scheduler.py  settings.py  storage.py  unmapped.py
src/api/websocket/: __init__.py  bridge.py  manager.py  messages.py
src/caching/: __init__.py  availability_detection.py  change_detection.py  odds_cache.py  risk_detection.py  warmup.py
src/db/: __init__.py  base.py  engine.py
src/db/models/: __init__.py  bookmaker.py  cleanup_run.py  competitor.py  event.py  event_scrape_status.py  mapping.py  market_odds.py  odds.py  risk_alert.py  scrape.py  settings.py  sport.py  storage_alert.py  storage_sample.py
src/market_mapping/: __init__.py  cache.py  unmapped_logger.py
src/market_mapping/mappers/: bet9ja.py  (+3 more)
src/matching/: __init__.py  schemas.py  service.py
src/scheduling/: __init__.py  jobs.py  scheduler.py  stale_detection.py
src/scraping/: __init__.py  broadcaster.py  competitor_events.py  event_coordinator.py  exceptions.py  logging.py  orchestrator.py  schemas.py  tournament_discovery.py
src/scripts/: analyze_outcomes.py  audit_market_mapping.py  verify_market_fixes.py
src/services/: cleanup.py
src/storage/: __init__.py  write_handler.py  write_queue.py
(+926 files in other folders)
