[project]
name = "betpawa-odds-comparison"
version = "0.1.0"
description = "Betpawa odds comparison tool"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "apscheduler>=3.10.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
