[project]
name = "market-mapping"
version = "0.1.0"
description = "Market mapping library for Betpawa odds comparison"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]
